--- a/index.html
+++ b/index.html
@@ -107,18 +107,19 @@
 <!-- Menus -->
 
   <div class="home page" id="home">
-		<div class="logo"><img src="images/logo.png"/></div>
-		<div class="bg_top_1"></div>
-		<div class="bg_top_2"></div>
-		<div class="bg_top_3"></div>
-		<div class="bg_top_4"></div>
-		<div class="bg_bottom_1"></div>
-		<div class="bg_bottom_2"></div>
-		<div class="bg_bottom_3"></div>
-		<div class="bg_bottom_4"></div>
-		<div class="bg_bottom_5"></div>
-		<div class="bg_bottom_6"></div>
-		<div class="bg_bottom_7"></div>
+		<div class="home_overlay">
+			<div class="logo"><img src="images/logo.png"/></div>
+		</div>
+		<div class="bg_animation">
+			<div class="bg_top_1"></div>
+			<div class="bg_top_2"></div>
+			<div class="bg_top_3"></div>
+			<div class="bg_top_4"></div>
+			<div class="bg_bottom_1"></div>
+			<div class="bg_bottom_2"></div>
+			<div class="bg_bottom_3"></div>
+			<div class="bg_bottom_4"></div>
+		</div>
   </div>
 
 	<div class="stories page" id="stories">
@@ -351,29 +352,27 @@
   </div>
 
 	<div class="share page" id="share">
-    	<div class="intro">
-    		<h1>WIN A 1-YEAR MEMBERSHIP!</h1>
-				</br>
-    		<h3>From your ha-ha! to your ah-ha! moments, we want to hear your favourite memories of Science World. Record your memory for a chance to win a 1-Year Membership.</h3>
-				</br></br>
-				<a href="https://scienceworld.storytap.com/130/signup?ref=30-anniversary" class="button">Let's Get Started</a>
-			  </br></br>
-			  <a href="terms.html">Terms and Conditions</a></br></br>
-				<p>Help us create those Ah-ha! moments in communities across the province!</p>
-				</br></br>
-				<a href="https://www.scienceworld.ca/donate" class="button">Donate</a>
-
-				<div class="bg_top_1"></div>
-				<div class="bg_top_2"></div>
-				<div class="bg_top_3"></div>
-				<div class="bg_top_4"></div>
-				<div class="bg_bottom_1"></div>
-				<div class="bg_bottom_2"></div>
-				<div class="bg_bottom_3"></div>
-				<div class="bg_bottom_4"></div>
-				<div class="bg_bottom_5"></div>
-				<div class="bg_bottom_6"></div>
-				<div class="bg_bottom_7"></div>
+	    	<div class="share_intro">
+	    		<h1>WIN A 1-YEAR MEMBERSHIP!</h1>
+					</br>
+	    		<h3>From your ha-ha! to your ah-ha! moments, we want to hear your favourite memories of Science World. Record your memory for a chance to win a 1-Year Membership.</h3>
+					</br></br>
+					<a href="https://scienceworld.storytap.com/130/signup?ref=30-anniversary" class="button">Let's Get Started</a>
+				  </br></br>
+				  <a href="terms.html">Terms and Conditions</a></br></br>
+					<p>Help us create those Ah-ha! moments in communities across the province!</p>
+					</br></br>
+					<a href="https://www.scienceworld.ca/donate" class="button">Donate</a>
+				</div>
+				<div class="bg_animation">
+					<div class="bg_top_1"></div>
+					<div class="bg_top_2"></div>
+					<div class="bg_top_3"></div>
+					<div class="bg_top_4"></div>
+					<div class="bg_bottom_1"></div>
+					<div class="bg_bottom_2"></div>
+					<div class="bg_bottom_3"></div>
+					<div class="bg_bottom_4"></div>
 			</div>
   </div>
 
